[package]
name = "omnipaxos-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.10.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.132"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
omnipaxos = { path = "/Users/juliatribocabre/Desktop/KTH/Thesis/repos/ithaca-1/omnipaxos", features = ["logging"]}
omnipaxos_storage = { path = "/Users/juliatribocabre/Desktop/KTH/Thesis/repos/ithaca-1/omnipaxos_storage"}
#omnipaxos = { git = "https://github.com/haraldng/ithaca.git", features = ["logging"] }
#omnipaxos_storage = { git = "https://github.com/haraldng/ithaca.git" }
chrono = "0.4.34"
rand = "0.8.5"
csv = "1.3.1"
config = "0.15.8"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
